# sde

./: README.md  pyproject.toml
api/: main.py  schemas.py
api/middleware/: cache.py  rate_limit.py
api/routes/: batch.py  diff.py  health.py  spec.py
benchmarks/: run_benchmark.py
benchmarks/datasets/ai_outputs/: llm_pairs.json
benchmarks/datasets/code/: functions.json
benchmarks/datasets/journalism/: articles.json
benchmarks/datasets/legal/: clauses.json
benchmarks/datasets/medical/: prescriptions.json
cli/: formatter.py  main.py
core/: __init__.py  aligner.py  chunker.py  comparator.py  domain_profiles.py  embedder.py  explainer.py  scorer.py
core/models/: __init__.py  base.py  local_llm.py  openai.py  sentence_transformers.py
docker/: Dockerfile  docker-compose.yml
docs/: CONTRIBUTING.md  DOMAINS.md  EMBEDDING-MODELS.md  HOW-IT-WORKS.md
integrations/github-action/: action.yml  entrypoint.sh
integrations/pre-commit/: .pre-commit-hooks.yaml
integrations/vscode-extension/: README.md  package.json
integrations/vscode-extension/src/: extension.ts
playground/: index.html
sdk/python/: __init__.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
spec/: SDE-SPEC-v1.md
tests/e2e/: test_api.py
tests/integration/: test_comparator.py
tests/unit/: test_chunker.py  test_explainer.py  test_scorer.py
